hw_7/err
In file included from /home/jupiter/Exp/C++/AdvCpp/hw_7/example/resource.cpp:2:
/home/jupiter/Exp/C++/AdvCpp/hw_7/include/system/file.h: In constructor ‘MappedFile::MappedFile(File&&, MappedFile::Mode, MappedFile::MapMode)’:
/home/jupiter/Exp/C++/AdvCpp/hw_7/include/system/file.h:100:14: error: no matching function for call to ‘std::unique_ptr<char>::unique_ptr(<brace-enclosed initializer list>)’
  100 |             }});
      |              ^
In file included from /usr/include/c++/10.1.0/memory:83,
                 from /home/jupiter/Exp/C++/AdvCpp/hw_7/include/system/file.h:11,
                 from /home/jupiter/Exp/C++/AdvCpp/hw_7/example/resource.cpp:2:
/usr/include/c++/10.1.0/bits/unique_ptr.h:349:2: note: candidate: ‘template<class _Up, class> std::unique_ptr<_Tp, _Dp>::unique_ptr(std::auto_ptr<_Up>&&) [with _Up = _Up; <template-parameter-2-2> = <template-parameter-1-2>; _Tp = char; _Dp = std::default_delete<char>]’
  349 |  unique_ptr(auto_ptr<_Up>&& __u) noexcept;
      |  ^~~~~~~~~~
/usr/include/c++/10.1.0/bits/unique_ptr.h:349:2: note:   template argument deduction/substitution failed:
In file included from /home/jupiter/Exp/C++/AdvCpp/hw_7/example/resource.cpp:2:
/home/jupiter/Exp/C++/AdvCpp/hw_7/include/system/file.h:100:14: note:   mismatched types ‘std::auto_ptr<_Up>’ and ‘char*’
  100 |             }});
      |              ^
In file included from /usr/include/c++/10.1.0/memory:83,
                 from /home/jupiter/Exp/C++/AdvCpp/hw_7/include/system/file.h:11,
                 from /home/jupiter/Exp/C++/AdvCpp/hw_7/example/resource.cpp:2:
/usr/include/c++/10.1.0/bits/unique_ptr.h:339:2: note: candidate: ‘template<class _Up, class _Ep, class> std::unique_ptr<_Tp, _Dp>::unique_ptr(std::unique_ptr<_Up, _Ep>&&) [with _Up = _Up; _Ep = _Ep; <template-parameter-2-3> = <template-parameter-1-3>; _Tp = char; _Dp = std::default_delete<char>]’
  339 |  unique_ptr(unique_ptr<_Up, _Ep>&& __u) noexcept
      |  ^~~~~~~~~~
/usr/include/c++/10.1.0/bits/unique_ptr.h:339:2: note:   template argument deduction/substitution failed:
In file included from /home/jupiter/Exp/C++/AdvCpp/hw_7/example/resource.cpp:2:
/home/jupiter/Exp/C++/AdvCpp/hw_7/include/system/file.h:100:14: note:   mismatched types ‘std::unique_ptr<_Tp, _Dp>’ and ‘char*’
  100 |             }});
      |              ^
In file included from /usr/include/c++/10.1.0/memory:83,
                 from /home/jupiter/Exp/C++/AdvCpp/hw_7/include/system/file.h:11,
                 from /home/jupiter/Exp/C++/AdvCpp/hw_7/example/resource.cpp:2:
/usr/include/c++/10.1.0/bits/unique_ptr.h:326:7: note: candidate: ‘std::unique_ptr<_Tp, _Dp>::unique_ptr(std::unique_ptr<_Tp, _Dp>&&) [with _Tp = char; _Dp = std::default_delete<char>]’
  326 |       unique_ptr(unique_ptr&&) = default;
      |       ^~~~~~~~~~
/usr/include/c++/10.1.0/bits/unique_ptr.h:326:7: note:   candidate expects 1 argument, 2 provided
/usr/include/c++/10.1.0/bits/unique_ptr.h:319:12: note: candidate: ‘template<class _Del, class> constexpr std::unique_ptr<_Tp, _Dp>::unique_ptr(std::nullptr_t) [with _Del = _Del; <template-parameter-2-2> = <template-parameter-1-2>; _Tp = char; _Dp = std::default_delete<char>]’
  319 |  constexpr unique_ptr(nullptr_t) noexcept
      |            ^~~~~~~~~~
/usr/include/c++/10.1.0/bits/unique_ptr.h:319:12: note:   template argument deduction/substitution failed:
In file included from /home/jupiter/Exp/C++/AdvCpp/hw_7/example/resource.cpp:2:
/home/jupiter/Exp/C++/AdvCpp/hw_7/include/system/file.h:100:14: note:   candidate expects 1 argument, 2 provided
  100 |             }});
      |              ^
In file included from /usr/include/c++/10.1.0/memory:83,
                 from /home/jupiter/Exp/C++/AdvCpp/hw_7/include/system/file.h:11,
                 from /home/jupiter/Exp/C++/AdvCpp/hw_7/example/resource.cpp:2:
/usr/include/c++/10.1.0/bits/unique_ptr.h:313:2: note: candidate: ‘template<class _Del, class _DelUnref> std::unique_ptr<_Tp, _Dp>::unique_ptr(std::unique_ptr<_Tp, _Dp>::pointer, std::__enable_if_t<std::is_lvalue_reference<_Del>::value, _DelUnref&&>) [with _Del = _Del; _DelUnref = _DelUnref; _Tp = char; _Dp = std::default_delete<char>]’ (deleted)
  313 |  unique_ptr(pointer,
      |  ^~~~~~~~~~
/usr/include/c++/10.1.0/bits/unique_ptr.h:313:2: note:   template argument deduction/substitution failed:
In file included from /usr/include/c++/10.1.0/bits/move.h:57,
                 from /usr/include/c++/10.1.0/bits/nested_exception.h:40,
                 from /usr/include/c++/10.1.0/exception:148,
                 from /usr/include/c++/10.1.0/ios:39,
                 from /usr/include/c++/10.1.0/ostream:38,
                 from /usr/include/c++/10.1.0/iostream:39,
                 from /home/jupiter/Exp/C++/AdvCpp/hw_7/example/resource.cpp:1:
/usr/include/c++/10.1.0/type_traits: In substitution of ‘template<bool _Cond, class _Tp> using __enable_if_t = typename std::enable_if::type [with bool _Cond = false; _Tp = std::default_delete<char>&&]’:
/usr/include/c++/10.1.0/bits/unique_ptr.h:313:2:   required by substitution of ‘template<class _Del, class _DelUnref> std::unique_ptr<char>::unique_ptr(std::unique_ptr<char>::pointer, std::__enable_if_t<std::is_lvalue_reference<_Tp>::value, _DelUnref&&>) [with _Del = std::default_delete<char>; _DelUnref = std::default_delete<char>]’
/home/jupiter/Exp/C++/AdvCpp/hw_7/include/system/file.h:100:14:   required from here
/usr/include/c++/10.1.0/type_traits:2192:11: error: no type named ‘type’ in ‘struct std::enable_if<false, std::default_delete<char>&&>’
 2192 |     using __enable_if_t = typename enable_if<_Cond, _Tp>::type;
      |           ^~~~~~~~~~~~~
In file included from /usr/include/c++/10.1.0/memory:83,
                 from /home/jupiter/Exp/C++/AdvCpp/hw_7/include/system/file.h:11,
                 from /home/jupiter/Exp/C++/AdvCpp/hw_7/example/resource.cpp:2:
/usr/include/c++/10.1.0/bits/unique_ptr.h:305:2: note: candidate: ‘std::unique_ptr<_Tp, _Dp>::unique_ptr(std::unique_ptr<_Tp, _Dp>::pointer, std::__enable_if_t<(! std::is_lvalue_reference<_Del>::value), _Del&&>) [with _Del = std::default_delete<char>; <template-parameter-2-2> = void; _Tp = char; _Dp = std::default_delete<char>; std::unique_ptr<_Tp, _Dp>::pointer = char*; std::__enable_if_t<(! std::is_lvalue_reference<_Del>::value), _Del&&> = std::default_delete<char>&&]’
  305 |  unique_ptr(pointer __p,
      |  ^~~~~~~~~~
/usr/include/c++/10.1.0/bits/unique_ptr.h:307:14: note:   no known conversion for argument 2 from ‘MappedFile::MappedFile(File&&, MappedFile::Mode, MappedFile::MapMode)::<lambda(char*)>’ to ‘std::__enable_if_t<true, std::default_delete<char>&&>’ {aka ‘std::default_delete<char>&&’}
  306 |      __enable_if_t<!is_lvalue_reference<_Del>::value,
      |      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  307 |      _Del&&> __d) noexcept
      |      ~~~~~~~~^~~
/usr/include/c++/10.1.0/bits/unique_ptr.h:293:2: note: candidate: ‘template<class _Del, class> std::unique_ptr<_Tp, _Dp>::unique_ptr(std::unique_ptr<_Tp, _Dp>::pointer, const deleter_type&) [with _Del = _Del; <template-parameter-2-2> = <template-parameter-1-2>; _Tp = char; _Dp = std::default_delete<char>]’
  293 |  unique_ptr(pointer __p, const deleter_type& __d) noexcept
      |  ^~~~~~~~~~
/usr/include/c++/10.1.0/bits/unique_ptr.h:293:2: note:   template argument deduction/substitution failed:
In file included from /home/jupiter/Exp/C++/AdvCpp/hw_7/example/resource.cpp:2:
/home/jupiter/Exp/C++/AdvCpp/hw_7/include/system/file.h:100:14: note:   cannot convert ‘<lambda closure object>MappedFile::MappedFile(File&&, MappedFile::Mode, MappedFile::MapMode)::<lambda(char*)>{size}’ (type ‘MappedFile::MappedFile(File&&, MappedFile::Mode, MappedFile::MapMode)::<lambda(char*)>’) to type ‘const deleter_type&’ {aka ‘const std::default_delete<char>&’}
  100 |             }});
      |              ^
In file included from /usr/include/c++/10.1.0/memory:83,
                 from /home/jupiter/Exp/C++/AdvCpp/hw_7/include/system/file.h:11,
                 from /home/jupiter/Exp/C++/AdvCpp/hw_7/example/resource.cpp:2:
/usr/include/c++/10.1.0/bits/unique_ptr.h:280:2: note: candidate: ‘template<class _Del, class> std::unique_ptr<_Tp, _Dp>::unique_ptr(std::unique_ptr<_Tp, _Dp>::pointer) [with _Del = _Del; <template-parameter-2-2> = <template-parameter-1-2>; _Tp = char; _Dp = std::default_delete<char>]’
  280 |  unique_ptr(pointer __p) noexcept
      |  ^~~~~~~~~~
/usr/include/c++/10.1.0/bits/unique_ptr.h:280:2: note:   template argument deduction/substitution failed:
In file included from /home/jupiter/Exp/C++/AdvCpp/hw_7/example/resource.cpp:2:
/home/jupiter/Exp/C++/AdvCpp/hw_7/include/system/file.h:100:14: note:   candidate expects 1 argument, 2 provided
  100 |             }});
      |              ^
In file included from /usr/include/c++/10.1.0/memory:83,
                 from /home/jupiter/Exp/C++/AdvCpp/hw_7/include/system/file.h:11,
                 from /home/jupiter/Exp/C++/AdvCpp/hw_7/example/resource.cpp:2:
/usr/include/c++/10.1.0/bits/unique_ptr.h:268:12: note: candidate: ‘template<class _Del, class> constexpr std::unique_ptr<_Tp, _Dp>::unique_ptr() [with _Del = _Del; <template-parameter-2-2> = <template-parameter-1-2>; _Tp = char; _Dp = std::default_delete<char>]’
  268 |  constexpr unique_ptr() noexcept
      |            ^~~~~~~~~~
/usr/include/c++/10.1.0/bits/unique_ptr.h:268:12: note:   template argument deduction/substitution failed:
In file included from /home/jupiter/Exp/C++/AdvCpp/hw_7/example/resource.cpp:2:
/home/jupiter/Exp/C++/AdvCpp/hw_7/include/system/file.h:100:14: note:   candidate expects 0 arguments, 2 provided
  100 |             }});
      |              ^
make[2]: *** [CMakeFiles/res.out.dir/build.make:83: CMakeFiles/res.out.dir/example/resource.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:126: CMakeFiles/res.out.dir/all] Error 2
make: *** [Makefile:104: all] Error 2
